<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lnlCampoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Name"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlCampoCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_cpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_CPF"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/edtCPF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="11"
            android:ems="11"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Birth"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/edtBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:ems="10"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlCampoPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Phone"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtDDD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:maxLength="3"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="9"
                android:ems="9"
                android:inputType="phone" />

            <Spinner
                android:id="@+id/spnTypePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlCampoEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Email"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textWebEmailAddress" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlCampoAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Adress"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtAdressStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:text="@string/txt_adress_street" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/edtAdressNumeber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="5"
                android:maxLength="6"
                android:text="@string/txt_adress_number" />


            <EditText
                android:id="@+id/edtAdressComplement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="16"
                android:inputType="text"
                android:text="@string/txt_adress_complement" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnlZipCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_ZipCode"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtZipCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/edtNeighborhood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="20"
                android:text="@string/txt_adress_Neighborhood" />



        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtAdressCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:text="@string/txt_adress_City" />
            <Spinner
                android:id="@+id/spnTypeState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/lnlCampoPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_Password"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="16"
                    android:ems="16"
                    android:inputType="textPassword" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnlCampoConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_confirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_Confirm_Password"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="16"
                    android:ems="16"
                    android:inputType="textPassword" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/lnlChurch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_Church"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_Church"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <Spinner
                android:id="@+id/spnTypeChurch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lnlPlan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cadastrar!"
        android:id="@+id/btn_cadastrar"
        />
</LinearLayout>

</ScrollView>